css/main.css
nav {
	font-family: 'Rajdhani', sans-serif;
	font-size: 1.5em;
	color: white;
	background-color: #030304;
}

.nav_col {
	padding: 0.8em;
	display: flex;
	justify-content: center;
	align-items: center;
}

.header_cust {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 500px;
	background-color: #4e60ee;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%234454ef' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%233948f0' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%232e3bf2' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23232ef4' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%231820f6' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%230d11f8' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%230506f6' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");

	background-size: cover;
	position: relative;
}

header {
	font: bold calc(0.09 * (100vw)) 'Rajdhani', sans-serif;
	color: white;
}

main {
	background-color: white;
	position: relative;
}

.cont_pad {
	padding: 2em 2em 10em 2em;
}

article {
	background-color: #0506f6;
	padding: 2em;
}

.svg_curve {
	position: absolute;
	bottom: 0;
}

.mycard {
	width: 90%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin-left: auto;
	margin-right: auto;
	padding: 2em;
	border: 5px solid #0506f6;
	border-radius: 5px;
}

.foot_cust {
	padding: 2em;
	background-color: #000000;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
}

.form_container {
	width: 90%;
	margin-left: auto;
	margin-right: auto;
}

